--- a/style.css
+++ b/style.css
@@ -3,9 +3,10 @@ body{
 }
 #myself{
     background: linear-gradient(#0ce4e4 0%,#11be11 100%);
-    margin: 50px;
+    margin: 40px;
     text-align: left;
     padding-right: 20px;
+    padding-left: 20px;
     padding-bottom: 20px;
     padding-top: 20px;
     font-size: 20px;
